# turbomachinery_calc

./: Cargo.toml  README.md  config.rs  data.rs  dataset.rs  lib.rs  main.rs  mod.rs  model.rs  normalization.rs  qt_frontend.py  utils.rs  visualize.rs
data/: test.csv  train.csv  validation.csv
qt_frontend/: CMakeLists.txt  annwindow.cpp  annwindow.h  annwindow.ui  homepage.ui  homepagewindow.cpp  homepagewindow.h  homepagewindow.ui  loadingscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rec.qrc
rust_backend/: Cargo.toml
rust_backend/data/: test.csv  train.csv  validation.csv
rust_backend/src/: lib.rs  lookup.rs  main.rs
rust_backend/src/ann/: config.rs  data.rs  dataset.rs  evaluate.rs  main.rs  mod.rs  model.rs  predict.rs  utils.rs  visualize.rs
rust_backend/src/knn/: data.rs  knn.rs  knn_evaluation.rs  mod.rs  utils.rs
rust_backend/src/svm/: data.rs  mod.rs  svm_model.rs
