[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.8.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"             # Ditambahkan jika Anda masih membutuhkan perulangan acak
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linregress = "0.3"       # Ditambahkan jika Anda menggunakan regresi linier
plotters = "0.3.4"       # Ditambahkan jika Anda masih membutuhkan visualisasi
csv = "1.3"

[lib]
name = "rust_backend"
crate-type = ["cdylib"]






